@@ -7,7 +7,7 @@ header {* Abstract commutation and confluence notions *}
 
 theory Commutation imports Main begin
 
-declare [[syntax_ambiguity_level = 100]]
+declare [[syntax_ambiguity = ignore]]
 
 
 subsection {* Basic definitions *}
