@@ -36,6 +36,10 @@ Minor INCOMPATIBILITY.  Note that in practice "num_const" or
 "num_position" etc. are mainly used instead (which also include
 position information via constraints).
 
+* Simplified configuration options for syntax ambiguity: see
+"syntax_ambiguity" and "syntax_ambiguity_limit" in isar-ref manual.
+Minor INCOMPATIBILITY.
+
 
 *** Pure ***
 
